--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "homepage": "./",
   "main": "public/electron.js",
   "keywords": [
-    "Example",
+    "Graasp Desktop",
     "React",
     "Electron"
   ],
@@ -21,24 +21,45 @@
   },
   "dependencies": {
     "@material-ui/core": "3.5.1",
+    "@material-ui/icons": "3.0.1",
+    "classnames": "2.2.6",
+    "connected-react-router": "5.0.1",
+    "electron": "3.0.10",
+    "electron-devtools-installer": "2.2.4",
+    "electron-dl": "1.12.0",
     "electron-is-dev": "1.0.1",
     "electron-publisher-s3": "20.17.2",
+    "extract-zip": "1.6.7",
+    "history": "4.7.2",
+    "immutable": "4.0.0-rc.12",
+    "is-online": "8.0.0",
+    "prop-types": "15.6.2",
     "react": "16.6.3",
     "react-dev-utils": "6.1.1",
-    "react-dom": "16.6.3"
+    "react-dom": "16.6.3",
+    "react-loading": "2.0.3",
+    "react-redux": "5.1.1",
+    "react-redux-toastr": "7.4.4",
+    "react-router": "4.3.1",
+    "react-router-dom": "4.3.1",
+    "redux": "4.0.1",
+    "redux-devtools-extension": "2.13.5",
+    "redux-promise": "0.6.0",
+    "redux-thunk": "2.3.0",
+    "wait-on": "3.2.0"
   },
   "devDependencies": {
     "concurrently": "4.1.0",
     "cross-env": "5.2.0",
-    "electron": "3.0.10",
     "electron-builder": "20.36.2",
+    "eslint-config-airbnb": "17.1.0",
     "react-scripts": "2.1.1",
     "version-bump-prompt": "4.2.1"
   },
   "build": {
     "appId": "com.your-domain",
     "compression": "normal",
-    "productName": "Example",
+    "productName": "Graasp Desktop",
     "directories": {
       "buildResources": "build",
       "output": "dist"
