feat: add export and delete
also fixes loading unsupported archives

close #5

--- a/package.json
+++ b/package.json
@@ -22,17 +22,19 @@
   "dependencies": {
     "@material-ui/core": "3.5.1",
     "@material-ui/icons": "3.0.1",
+    "archiver": "3.0.0",
     "classnames": "2.2.6",
     "connected-react-router": "5.0.1",
-    "electron": "3.0.10",
     "electron-devtools-installer": "2.2.4",
     "electron-dl": "1.12.0",
     "electron-is-dev": "1.0.1",
     "electron-publisher-s3": "20.17.2",
     "extract-zip": "1.6.7",
+    "fs-extra": "7.0.1",
     "history": "4.7.2",
     "immutable": "4.0.0-rc.12",
     "is-online": "8.0.0",
+    "ncp": "2.0.0",
     "prop-types": "15.6.2",
     "react": "16.6.3",
     "react-dev-utils": "6.1.1",
@@ -52,6 +54,7 @@
     "concurrently": "4.1.0",
     "cross-env": "5.2.0",
     "electron-builder": "20.36.2",
+    "electron": "3.0.10",
     "eslint-config-airbnb": "17.1.0",
     "react-scripts": "2.1.1",
     "version-bump-prompt": "4.2.1"
