build: add readme
closes #23

--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "graasp-desktop",
   "version": "0.1.0",
-  "description": "Building and Publishing a React Based Electron App From Scratch",
+  "description": "Desktop application for the Graasp ecosystem.",
   "private": false,
-  "author": "Juan Carlos Farah",
+  "author": "React EPFL",
+  "contributors": [
+    "Juan Carlos Farah",
+    "Hassan Abdul Ghaffar"
+  ],
   "license": "MIT",
   "homepage": "./",
   "main": "public/electron.js",
@@ -12,23 +16,30 @@
     "React",
     "Electron"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/react-epfl/graasp-desktop"
+  },
   "scripts": {
     "dev": "yarn react-scripts start",
     "build": "react-scripts build",
     "start": "concurrently \"cross-env BROWSER=none yarn react-scripts start\" \"wait-on http://localhost:3000 && electron .\"",
     "pack": "electron-builder --dir",
-    "dist": "npx build --x64 --macos --win --linux --c.extraMetadata.main=build/electron.js -p always"
+    "postinstall": "electron-builder install-app-deps",
+    "dist": "env-cmd ./.env.prod electron-builder",
+    "release": "env-cmd ./.env.prod build"
   },
   "dependencies": {
     "@material-ui/core": "3.9.3",
     "@material-ui/icons": "3.0.2",
     "archiver": "3.0.0",
     "classnames": "2.2.6",
-    "connected-react-router": "5.0.1",
+    "connected-react-router": "6.4.0",
     "electron-devtools-installer": "2.2.4",
     "electron-dl": "1.14.0",
     "electron-is-dev": "1.1.0",
     "electron-publisher-s3": "20.17.2",
+    "electron-updater": "4.0.6",
     "extract-zip": "1.6.7",
     "fs-extra": "7.0.1",
     "history": "4.9.0",
@@ -37,13 +48,13 @@
     "ncp": "2.0.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
-    "react-dev-utils": "6.1.1",
+    "react-dev-utils": "9.0.0",
     "react-dom": "16.8.6",
     "react-loading": "2.0.3",
-    "react-redux": "5.1.1",
+    "react-redux": "7.0.3",
     "react-redux-toastr": "7.4.9",
-    "react-router": "4.3.1",
-    "react-router-dom": "4.3.1",
+    "react-router": "5.0.0",
+    "react-router-dom": "5.0.0",
     "redux": "4.0.1",
     "redux-devtools-extension": "2.13.8",
     "redux-promise": "0.6.0",
@@ -53,16 +64,17 @@
   "devDependencies": {
     "concurrently": "4.1.0",
     "cross-env": "5.2.0",
-    "electron": "3.0.10",
+    "electron": "5.0.0",
     "electron-builder": "20.39.0",
+    "env-cmd": "8.0.2",
     "eslint-config-airbnb": "17.1.0",
-    "react-scripts": "2.1.1",
-    "version-bump-prompt": "4.2.1"
+    "react-scripts": "3.0.0",
+    "version-bump-prompt": "5.0.1"
   },
   "build": {
-    "appId": "com.your-domain",
+    "appId": "com.graasp",
     "compression": "normal",
-    "productName": "Graasp Desktop",
+    "productName": "Graasp",
     "directories": {
       "buildResources": "build",
       "output": "dist"
@@ -75,7 +87,10 @@
         "dmg",
         "mas"
       ],
-      "category": "public.app-category.news"
+      "category": "public.app-category.education",
+      "publish": [
+        "github"
+      ]
     },
     "mas": {
       "entitlements": "assets/entitlements.mas.plist",
@@ -84,7 +99,10 @@
     },
     "win": {
       "target": "nsis",
-      "icon": "assets/icon.ico"
+      "icon": "assets/icon.ico",
+      "publish": [
+        "github"
+      ]
     },
     "linux": {
       "icon": "assets/icon.png",
@@ -93,7 +111,10 @@
         "AppImage"
       ],
       "description": "Example",
-      "category": "Network;Feed"
+      "category": "Network;Feed",
+      "publish": [
+        "github"
+      ]
     }
   },
   "browserslist": [
