feat: enable auto update
closes #24

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ jspm_packages
 .DS_Store
 .env.*
 env*
+.env*
 
 # include encrypted environment variables
 !.env*.encrypted
@@ -53,5 +54,8 @@ build/*
 # exclude keys
 *.aes
 
-# exclude provision profile
+# exclude provision profiles
 /assets/*.provisionprofile
+
+# exclude tarballs
+*.tgz
