--- a/package.json
+++ b/package.json
@@ -27,10 +27,19 @@
     "pack": "electron-builder --dir",
     "postinstall": "electron-builder install-app-deps",
     "predist": "yarn build",
+    "lint": "eslint .",
+    "prettier": "prettier --check '{src,public}/**/*.js'",
+    "test": "react-scripts test",
     "dist": "env-cmd ./.env electron-builder",
     "prerelease": "yarn build",
     "release": "git add CHANGELOG.md && standard-version -a",
-    "postrelease": "env-cmd ./.env build"
+    "hooks:uninstall": "node node_modules/husky/husky.js uninstall",
+    "hooks:install": "node node_modules/husky/husky.js install",
+    "postrelease": "env-cmd ./.env build",
+    "test:once": "cross-env CI=true env-cmd ./.env.test react-scripts test --env=jsdom",
+    "test:coverage": "cross-env CI=true env-cmd ./.env.test react-scripts test --env=jsdom --coverage",
+    "test:ci": "run-s test:coverage report",
+    "report": "cat ./coverage/lcov.info | env-cmd ./.env.test codacy-coverage"
   },
   "dependencies": {
     "@material-ui/core": "3.9.3",
@@ -43,6 +52,8 @@
     "electron-is-dev": "1.1.0",
     "electron-publisher-s3": "20.17.2",
     "electron-updater": "4.0.6",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "1.12.1",
     "extract-zip": "1.6.7",
     "fs-extra": "7.0.1",
     "history": "4.9.0",
@@ -65,13 +76,21 @@
     "wait-on": "3.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "7.5.2",
+    "@commitlint/config-conventional": "7.5.0",
+    "codacy-coverage": "3.4.0",
     "concurrently": "4.1.0",
     "cross-env": "5.2.0",
     "electron": "5.0.0",
     "electron-builder": "20.39.0",
     "env-cmd": "8.0.2",
     "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "4.2.0",
+    "husky": "2.1.0",
+    "prettier": "1.17.0",
+    "pretty-quick": "1.10.0",
     "react-scripts": "3.0.0",
+    "redux-mock-store": "1.5.3",
     "standard-version": "5.0.2",
     "version-bump-prompt": "5.0.1"
   },
