fix: fix auto update
closes #29

--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "test": "react-scripts test",
     "dist": "env-cmd ./.env electron-builder",
     "prerelease": "yarn build",
-    "release": "git add CHANGELOG.md && standard-version -a",
+    "release": "git add CHANGELOG.md && standard-version -a && env-cmd ./.env build",
     "hooks:uninstall": "node node_modules/husky/husky.js uninstall",
     "hooks:install": "node node_modules/husky/husky.js install",
-    "postrelease": "env-cmd ./.env build",
+    "postrelease": "git push --follow-tags origin master",
     "test:once": "cross-env CI=true env-cmd ./.env.test react-scripts test --env=jsdom",
     "test:coverage": "cross-env CI=true env-cmd ./.env.test react-scripts test --env=jsdom --coverage",
     "test:ci": "run-s test:coverage report",
@@ -50,6 +50,7 @@
     "electron-devtools-installer": "2.2.4",
     "electron-dl": "1.14.0",
     "electron-is-dev": "1.1.0",
+    "electron-log": "3.0.5",
     "electron-publisher-s3": "20.17.2",
     "electron-updater": "4.0.6",
     "enzyme": "3.9.0",
