fix: log messages correctly
closes #31

--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
         "snap",
         "AppImage"
       ],
-      "description": "Example",
+      "description": "Desktop application for the Graasp ecosystem.",
       "category": "Network;Feed",
       "publish": [
         "github"
