build: provide zip file for auto updates
closes #32

--- a/package.json
+++ b/package.json
@@ -109,7 +109,8 @@
       "target": [
         "pkg",
         "dmg",
-        "mas"
+        "mas",
+        "zip"
       ],
       "category": "public.app-category.education",
       "publish": [
