--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test": "react-scripts test",
     "dist": "env-cmd ./.env electron-builder",
     "prerelease": "yarn build",
-    "release": "git add CHANGELOG.md && standard-version -a && env-cmd ./.env build",
+    "release": "git add CHANGELOG.md && standard-version -a && env-cmd ./.env build -mwl",
     "hooks:uninstall": "node node_modules/husky/husky.js uninstall",
     "hooks:install": "node node_modules/husky/husky.js install",
     "postrelease": "git push --follow-tags origin master",
