--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@material-ui/core": "3.9.3",
     "@material-ui/icons": "3.0.2",
+    "@sentry/electron": "0.17.1",
     "archiver": "3.0.0",
     "classnames": "2.2.6",
     "connected-react-router": "6.4.0",
