feat: allow users to visit an online space
closes #39

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "postinstall": "electron-builder install-app-deps",
     "predist": "yarn build",
     "lint": "eslint .",
-    "prettier": "prettier --check '{src,public}/**/*.js'",
+    "prettier:check": "prettier --check '{src,public}/**/*.js'",
+    "prettier:write": "prettier --write '{src,public}/**/*.js'",
     "test": "react-scripts test",
     "dist": "env-cmd ./.env electron-builder",
     "prerelease": "yarn build",
@@ -64,6 +65,7 @@
     "ncp": "2.0.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
+    "react-detect-offline": "2.3.0",
     "react-dev-utils": "9.0.0",
     "react-dom": "16.8.6",
     "react-loading": "2.0.3",
