refactor: place electron files in app folder
closes #40

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "license": "MIT",
   "homepage": "./",
-  "main": "public/electron.js",
+  "main": "app/electron.js",
   "keywords": [
     "Graasp Desktop",
     "React",
@@ -28,8 +28,8 @@
     "postinstall": "electron-builder install-app-deps",
     "predist": "yarn build",
     "lint": "eslint .",
-    "prettier:check": "prettier --check '{src,public}/**/*.js'",
-    "prettier:write": "prettier --write '{src,public}/**/*.js'",
+    "prettier:check": "prettier --check '{src,app}/**/*.js'",
+    "prettier:write": "prettier --write '{src,app}/**/*.js'",
     "test": "react-scripts test",
     "dist": "env-cmd ./.env electron-builder",
     "prerelease": "yarn build",
