--- a/package.json
+++ b/package.json
@@ -62,6 +62,10 @@
     "history": "4.9.0",
     "immutable": "4.0.0-rc.12",
     "is-online": "8.2.0",
+    "lowdb": "1.0.0",
+    "md5": "2.2.1",
+    "mime-types": "2.1.24",
+    "mkdirp": "0.5.1",
     "ncp": "2.0.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
