--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "redux-devtools-extension": "2.13.8",
     "redux-promise": "0.6.0",
     "redux-thunk": "2.3.0",
+    "rimraf": "2.6.3",
     "wait-on": "3.2.0"
   },
   "devDependencies": {
