refactor: prettify files with prettier

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "postinstall": "electron-builder install-app-deps",
     "predist": "yarn build",
     "lint": "eslint .",
-    "prettier:check": "prettier --check '{src,app}/**/*.js'",
-    "prettier:write": "prettier --write '{src,app}/**/*.js'",
+    "prettier:check": "prettier --check '{src,public}/**/*.js'",
+    "prettier:write": "prettier --write '{src,public}/**/*.js'",
     "test": "react-scripts test",
     "dist": "env-cmd ./.env electron-builder",
     "prerelease": "yarn test:once && yarn build",
