--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,11 @@ jspm_packages
 .DS_Store
 .env.*
 env*
+public/env.json
 .env*
 
 # include encrypted environment variables
+electron-builder.env
 !.env*.encrypted
 !env*.encrypted
 
