feat: support multiple languages
Support French and English.

closes #77

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "enzyme-adapter-react-16": "1.12.1",
     "extract-zip": "1.6.7",
     "history": "4.9.0",
+    "i18next": "15.1.0",
     "immutable": "4.0.0-rc.12",
     "is-online": "8.2.0",
     "lowdb": "1.0.0",
@@ -72,6 +73,7 @@
     "react-detect-offline": "2.3.0",
     "react-dev-utils": "9.0.0",
     "react-dom": "16.8.6",
+    "react-i18next": "10.9.0",
     "react-loading": "2.0.3",
     "react-redux": "7.0.3",
     "react-redux-toastr": "7.4.9",
