--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@sentry/browser": "5.1.1",
     "@sentry/electron": "0.17.1",
     "archiver": "3.0.0",
+    "bson-objectid": "1.2.5",
     "cheerio": "1.0.0-rc.3",
     "classnames": "2.2.6",
     "connected-react-router": "6.4.0",
