feat: support offline actions
Support getting app instance and creating, getting and updating
app instance resources when offline. Fix various warnings regarding
prop types.

closes #83

--- a/package.json
+++ b/package.json
@@ -71,11 +71,13 @@
     "mkdirp": "0.5.1",
     "node-machine-id": "1.1.10",
     "prop-types": "15.7.2",
+    "qs": "6.7.0",
     "react": "16.8.6",
     "react-detect-offline": "2.3.0",
     "react-dev-utils": "9.0.0",
     "react-dom": "16.8.6",
     "react-i18next": "10.9.0",
+    "react-immutable-proptypes": "2.1.0",
     "react-loading": "2.0.3",
     "react-redux": "7.0.3",
     "react-redux-toastr": "7.4.9",
