--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "i18next": "15.1.0",
     "immutable": "4.0.0-rc.12",
     "is-online": "8.2.0",
+    "lodash": "4.17.11",
     "lowdb": "1.0.0",
     "md5": "2.2.1",
     "mime-types": "2.1.24",
@@ -78,6 +79,7 @@
     "react-dom": "16.8.6",
     "react-i18next": "10.9.0",
     "react-immutable-proptypes": "2.1.0",
+    "react-json-view": "1.19.1",
     "react-loading": "2.0.3",
     "react-redux": "7.0.3",
     "react-redux-toastr": "7.4.9",
