fix: specify protocol in url when downloading file
closes #99

--- a/package.json
+++ b/package.json
@@ -52,10 +52,10 @@
     "cheerio": "1.0.0-rc.3",
     "classnames": "2.2.6",
     "connected-react-router": "6.4.0",
+    "download": "7.1.0",
     "electron-devtools-installer": "2.2.4",
-    "electron-dl": "1.14.0",
     "electron-is-dev": "1.1.0",
-    "electron-log": "3.0.5",
+    "electron-log": "3.0.6",
     "electron-publisher-s3": "20.17.2",
     "electron-updater": "4.0.6",
     "enzyme": "3.9.0",
@@ -100,8 +100,8 @@
     "codacy-coverage": "3.4.0",
     "concurrently": "4.1.0",
     "cross-env": "5.2.0",
-    "electron": "5.0.0",
-    "electron-builder": "20.39.0",
+    "electron": "5.0.3",
+    "electron-builder": "20.43.0",
     "env-cmd": "8.0.2",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "4.2.0",
