fix: automatically write env.json with contents from env
closes #116

--- a/package.json
+++ b/package.json
@@ -22,25 +22,27 @@
   },
   "scripts": {
     "dev": "yarn react-scripts start",
-    "build": "env-cmd ./.env react-scripts build",
-    "start": "concurrently \"env-cmd ./.env.local react-scripts start\" \"wait-on http://localhost:3000 && env-cmd ./.env.local electron .\"",
+    "build": "env-cmd -f ./.env react-scripts build",
+    "start": "concurrently \"env-cmd -f ./.env.local react-scripts start\" \"wait-on http://localhost:3000 && env-cmd -f ./.env.local electron .\"",
     "pack": "electron-builder --dir",
     "postinstall": "electron-builder install-app-deps",
+    "prestart": "env-cmd -f ./.env.local node scripts/setup.js",
+    "prebuild": "env-cmd -f ./.env node scripts/setup.js",
     "predist": "yarn build",
     "lint": "eslint .",
     "prettier:check": "prettier --check '{src,public}/**/*.js'",
     "prettier:write": "prettier --write '{src,public}/**/*.js'",
     "test": "react-scripts test",
-    "dist": "env-cmd ./.env electron-builder",
+    "dist": "env-cmd -f ./.env electron-builder",
     "prerelease": "yarn test:once && yarn build",
-    "release": "git add CHANGELOG.md && standard-version -a && env-cmd ./.env build -mwl",
+    "release": "git add CHANGELOG.md && standard-version -a && env-cmd -f ./.env build -mwl",
     "hooks:uninstall": "node node_modules/husky/husky.js uninstall",
     "hooks:install": "node node_modules/husky/husky.js install",
     "postrelease": "git push --follow-tags origin master",
-    "test:once": "cross-env CI=true env-cmd ./.env.test react-scripts test --env=jsdom",
-    "test:coverage": "cross-env CI=true env-cmd ./.env.test react-scripts test --env=jsdom --coverage",
+    "test:once": "cross-env CI=true env-cmd -f ./.env.test react-scripts test --env=jsdom",
+    "test:coverage": "cross-env CI=true env-cmd -f ./.env.test react-scripts test --env=jsdom --coverage",
     "test:ci": "run-s test:coverage report",
-    "report": "cat ./coverage/lcov.info | env-cmd ./.env.test codacy-coverage"
+    "report": "cat ./coverage/lcov.info | env-cmd -f ./.env.test codacy-coverage"
   },
   "dependencies": {
     "@material-ui/core": "4.1.1",
@@ -102,7 +104,7 @@
     "cross-env": "5.2.0",
     "electron": "5.0.3",
     "electron-builder": "20.43.0",
-    "env-cmd": "8.0.2",
+    "env-cmd": "9.0.3",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "4.2.0",
     "husky": "2.1.0",
