--- a/Dockerfile.run.lint
+++ b/Dockerfile.run.lint
@@ -7,8 +7,8 @@ WORKDIR /usr/src/app
 COPY package.json /usr/src/app/
 RUN yarn install
 
-# prebuild before linting
-RUN yarn prebuild
+# setup before linting
+RUN yarn setup
 
 # bundle app source
 COPY . /usr/src/app
