--- a/Dockerfile.run.test
+++ b/Dockerfile.run.test
@@ -7,8 +7,8 @@ WORKDIR /usr/src/app
 COPY package.json /usr/src/app/
 RUN yarn install
 
-# prebuild before testing
-RUN yarn prebuild
+# setup before testing
+RUN yarn setup
 
 # bundle app source
 COPY . /usr/src/app
