--- a/package.json
+++ b/package.json
@@ -94,8 +94,7 @@
     "redux-thunk": "2.3.0",
     "request-promise": "4.2.4",
     "rimraf": "2.6.3",
-    "universal-analytics": "0.4.20",
-    "wait-on": "3.2.0"
+    "universal-analytics": "0.4.20"
   },
   "devDependencies": {
     "@commitlint/cli": "7.5.2",
@@ -109,12 +108,13 @@
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "4.2.0",
     "husky": "2.1.0",
+    "npm-run-all": "4.1.5",
     "prettier": "1.17.0",
     "pretty-quick": "1.10.0",
     "react-scripts": "3.0.0",
     "redux-mock-store": "1.5.3",
     "standard-version": "5.0.2",
-    "version-bump-prompt": "5.0.1"
+    "wait-on": "3.2.0"
   },
   "build": {
     "appId": "com.graasp",
