--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-loading": "2.0.3",
     "react-redux": "7.0.3",
     "react-redux-toastr": "7.4.9",
+    "react-resizable": "1.8.0",
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
     "redux": "4.0.1",
