--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "type": "git",
     "url": "https://github.com/graasp/graasp-desktop"
   },
+  "bugs": {
+    "url": "https://github.com/graasp/graasp-desktop/issues"
+  },
   "scripts": {
     "dev": "yarn react-scripts start",
     "build": "env-cmd -f ./.env react-scripts build",
