fix: set bug report link and pull info from package.json in about window
also set homepage to Graasp site

resolves #142

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "Hassan Abdul Ghaffar"
   ],
   "license": "MIT",
-  "homepage": "./",
+  "homepage": "https://graasp.eu/",
   "main": "public/electron.js",
   "keywords": [
     "Graasp Desktop",
