fix: define homepage in openAboutWindow not package.json
This is to avoid the CRA build process from breaking.

closes #156

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "Hassan Abdul Ghaffar"
   ],
   "license": "MIT",
-  "homepage": "https://graasp.eu/",
+  "homepage": "./",
   "main": "public/electron.js",
   "keywords": [
     "Graasp Desktop",
