fix: fix windows exceptions on loading and deleting spaces
Loading a space or trying to remove it if the process fails was causing
an EPERM or an ENOTEMPTY exception due to issues with Windows and how
it does not release file handles properly. We are now handling this
using wrappers around the functions so that they are tried multiple
times or wait until a file access is finished.

closes #159

--- a/package.json
+++ b/package.json
@@ -28,20 +28,22 @@
     "build": "env-cmd -f ./.env react-scripts build",
     "start": "concurrently \"env-cmd -f ./.env.local react-scripts start\" \"wait-on http://localhost:3000 && env-cmd -f ./.env.local electron .\"",
     "pack": "electron-builder --dir",
-    "postinstall": "electron-builder install-app-deps",
     "prestart": "env-cmd -f ./.env.local node scripts/setup.js",
     "prebuild": "env-cmd -f ./.env node scripts/setup.js",
-    "setup": "node scripts/setup.js",
     "predist": "yarn build",
+    "predist:windows": "yarn build",
+    "prerelease": "yarn test:once && yarn build",
+    "setup": "node scripts/setup.js",
     "lint": "eslint .",
     "prettier:check": "prettier --check '{src,public}/**/*.js'",
     "prettier:write": "prettier --write '{src,public}/**/*.js'",
     "test": "react-scripts test",
     "dist": "env-cmd -f ./.env electron-builder",
-    "prerelease": "yarn test:once && yarn build",
+    "dist:windows": "env-cmd -f ./.env build -w",
     "release": "git add CHANGELOG.md && standard-version -a && env-cmd -f ./.env build -mwl",
     "hooks:uninstall": "node node_modules/husky/husky.js uninstall",
     "hooks:install": "node node_modules/husky/husky.js install",
+    "postinstall": "electron-builder install-app-deps",
     "postrelease": "git push --follow-tags origin master",
     "test:once": "cross-env CI=true env-cmd -f ./.env.test react-scripts test --env=jsdom",
     "test:coverage": "cross-env CI=true env-cmd -f ./.env.test react-scripts test --env=jsdom --coverage",
