--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "i18next": "15.1.0",
     "immutable": "4.0.0-rc.12",
     "is-online": "8.2.0",
+    "katex": "0.11.0",
     "lodash": "4.17.13",
     "lowdb": "1.0.0",
     "md5": "2.2.1",
@@ -93,6 +94,7 @@
     "react-immutable-proptypes": "2.1.0",
     "react-json-view": "1.19.1",
     "react-loading": "2.0.3",
+    "react-quill": "1.3.3",
     "react-redux": "7.0.3",
     "react-redux-toastr": "7.4.9",
     "react-resizable": "1.8.0",
