build: require node 12

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "Juan Carlos Farah",
     "Hassan Abdul Ghaffar"
   ],
+  "engines": {
+    "node": "12"
+  },
   "license": "MIT",
   "homepage": "./",
   "main": "public/electron.js",
