--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "node-machine-id": "1.1.10",
     "prop-types": "15.7.2",
     "qs": "6.7.0",
+    "re-resizable": "6.0.0",
     "react": "16.8.6",
     "react-detect-offline": "2.3.0",
     "react-dev-utils": "9.0.0",
@@ -100,7 +101,6 @@
     "react-quill": "1.3.3",
     "react-redux": "7.0.3",
     "react-redux-toastr": "7.4.9",
-    "react-resizable": "1.8.0",
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
     "redux": "4.0.1",
