chore: add kim as a contributor
closes #185

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "React EPFL",
   "contributors": [
     "Juan Carlos Farah",
-    "Hassan Abdul Ghaffar"
+    "Hassan Abdul Ghaffar",
+    "Kim Lan Phan Hoang"
   ],
   "engines": {
     "node": "12"
