build: support 32-bit windows builds
closes #183

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "prebuild": "env-cmd -f ./.env node scripts/setup.js",
     "predist": "yarn build",
     "predist:windows": "yarn build",
+    "predist:mac": "yarn build",
+    "predist:linux": "yarn build",
+    "predist:all": "yarn build",
     "prerelease": "yarn test:once && yarn build",
     "setup": "node scripts/setup.js",
     "lint": "eslint .",
@@ -43,8 +46,13 @@
     "prettier:write": "prettier --write '{src,public}/**/*.js'",
     "test": "react-scripts test",
     "dist": "env-cmd -f ./.env electron-builder",
-    "dist:windows": "env-cmd -f ./.env build -w",
-    "release": "git add CHANGELOG.md && standard-version -a && env-cmd -f ./.env build -mwl",
+    "dist:windows": "env-cmd -f ./.env build -w --x64 --ia32",
+    "dist:mac": "env-cmd -f ./.env build -m",
+    "dist:linux": "env-cmd -f ./.env build -l",
+    "dist:all": "run-p dist:x64 dist:x64ia32",
+    "dist:x64": "env-cmd -f ./.env build -ml",
+    "dist:x64ia32": "env-cmd -f ./.env build -w --x64 --ia32",
+    "release": "run-s version dist:all",
     "hooks:uninstall": "node node_modules/husky/husky.js uninstall",
     "hooks:install": "node node_modules/husky/husky.js install",
     "postinstall": "electron-builder install-app-deps",
@@ -54,7 +62,8 @@
     "ci": "run-s test:ci report:ci",
     "test:ci": "react-scripts test --env=jsdom --coverage",
     "report": "cat ./coverage/lcov.info | env-cmd -f ./.env.test codacy-coverage",
-    "report:ci": "cat ./coverage/lcov.info | codacy-coverage"
+    "report:ci": "cat ./coverage/lcov.info | codacy-coverage",
+    "version": "git add CHANGELOG.md && standard-version -a"
   },
   "dependencies": {
     "@material-ui/core": "4.1.1",
