--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "prestart": "env-cmd -f ./.env.local node scripts/setup.js",
     "prebuild": "env-cmd -f ./.env node scripts/setup.js",
     "predist": "yarn build",
-    "predist:windows": "yarn build",
+    "predist:win": "yarn build",
     "predist:mac": "yarn build",
     "predist:linux": "yarn build",
+    "predist:posix": "yarn build",
     "predist:all": "yarn build",
     "prerelease": "yarn test:once && yarn build",
     "setup": "node scripts/setup.js",
@@ -46,12 +47,12 @@
     "prettier:write": "prettier --write '{src,public}/**/*.js'",
     "test": "react-scripts test",
     "dist": "env-cmd -f ./.env electron-builder",
-    "dist:windows": "env-cmd -f ./.env build -w --x64 --ia32",
-    "dist:mac": "env-cmd -f ./.env build -m",
-    "dist:linux": "env-cmd -f ./.env build -l",
-    "dist:all": "run-p dist:x64 dist:x64ia32",
-    "dist:x64": "env-cmd -f ./.env build -ml",
-    "dist:x64ia32": "env-cmd -f ./.env build -w --x64 --ia32",
+    "dist:win": "env-cmd -f ./.env electron-builder -w --x64 --ia32",
+    "dist:mac": "env-cmd -f ./.env electron-builder -m",
+    "dist:linux": "env-cmd -f ./.env electron-builder -l",
+    "dist:posix": "env-cmd -f ./.env electron-builder -ml",
+    "dist:win:docker": "./scripts/buildWindowsWithDocker.sh",
+    "dist:all": "run-s dist:posix dist:win:docker",
     "release": "run-s version dist:all",
     "hooks:uninstall": "node node_modules/husky/husky.js uninstall",
     "hooks:install": "node node_modules/husky/husky.js install",
@@ -128,16 +129,16 @@
     "codacy-coverage": "3.4.0",
     "concurrently": "4.1.0",
     "cross-env": "5.2.0",
-    "electron": "5.0.3",
-    "electron-builder": "20.43.0",
-    "env-cmd": "9.0.3",
+    "electron": "7.0.0",
+    "electron-builder": "21.2.0",
+    "env-cmd": "10.0.1",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "4.2.0",
     "husky": "2.1.0",
     "npm-run-all": "4.1.5",
     "prettier": "1.17.0",
     "pretty-quick": "1.10.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "3.2.0",
     "redux-mock-store": "1.5.3",
     "standard-version": "5.0.2",
     "wait-on": "3.2.0"
@@ -154,10 +155,8 @@
       "icon": "assets/icon.icns",
       "type": "distribution",
       "target": [
-        "pkg",
         "dmg",
-        "mas",
-        "zip"
+        "mas"
       ],
       "category": "public.app-category.education",
       "publish": [
