build: include zip file for mac

--- a/package.json
+++ b/package.json
@@ -155,7 +155,8 @@
       "type": "distribution",
       "target": [
         "dmg",
-        "mas"
+        "mas",
+        "zip"
       ],
       "category": "public.app-category.education",
       "publish": [
