--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "dist:linux": "env-cmd -f ./.env electron-builder -l",
     "dist:posix": "env-cmd -f ./.env electron-builder -ml",
     "dist:win:docker": "./scripts/buildWindowsWithDocker.sh",
-    "dist:all": "run-s dist:posix dist:win:docker",
+    "dist:all": "run-s dist:posix dist:win",
     "release": "run-s version dist:all",
     "hooks:uninstall": "node node_modules/husky/husky.js uninstall",
     "hooks:install": "node node_modules/husky/husky.js install",
