build: divide manual and automatic release

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "predist:linux": "yarn build",
     "predist:posix": "yarn build",
     "prerelease": "yarn test:once && yarn build",
+    "prerelease:manual": "yarn test:once",
     "setup": "node scripts/setup.js",
     "lint": "eslint .",
     "prettier:check": "prettier --check '{src,public}/**/*.js'",
@@ -52,7 +53,8 @@
     "dist:posix": "env-cmd -f ./.env electron-builder -ml",
     "dist:win:docker": "./scripts/buildWindowsWithDocker.sh",
     "dist:all": "run-s dist:posix dist:win",
-    "release": "run-s version dist:all",
+    "release:manual": "run-s version dist:all",
+    "release": "git add CHANGELOG.md && standard-version -a && env-cmd -f ./.env electron-builder -ml && env-cmd -f ./.env electron-builder -w --x64 --ia32",
     "hooks:uninstall": "node node_modules/husky/husky.js uninstall",
     "hooks:install": "node node_modules/husky/husky.js install",
     "postinstall": "electron-builder install-app-deps",
@@ -82,7 +84,7 @@
     "electron-is-dev": "1.1.0",
     "electron-log": "4.0.6",
     "electron-publisher-s3": "20.17.2",
-    "electron-updater": "4.2.0",
+    "electron-updater": "4.2.2",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
     "extract-zip": "1.6.7",
