build: do not build mas
There are currently some issues building multiple
target with Electron Builder. Until we actually
deploy the app via the Apple Store, there is no
point to build the mas target.

refs electron-userland/electron-builder#4520

--- a/package.json
+++ b/package.json
@@ -157,13 +157,13 @@
       "type": "distribution",
       "target": [
         "dmg",
-        "mas",
         "zip"
       ],
       "category": "public.app-category.education",
       "publish": [
         "github"
-      ]
+      ],
+      "gatekeeperAssess": true
     },
     "mas": {
       "entitlements": "assets/entitlements.mas.plist",
