--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-split-pane": "0.1.89",
+    "recharts": "1.8.5",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-promise": "0.6.0",
