test: write general test for space visit, add dialog mock

--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "prerelease:manual": "yarn test:once",
     "setup": "node scripts/setup.js",
     "lint": "eslint .",
-    "prettier:check": "prettier --check '{src,public}/**/*.js'",
-    "prettier:write": "prettier --write '{src,public}/**/*.js'",
+    "prettier:check": "prettier --check '{src,public,test}/**/*.js'",
+    "prettier:write": "prettier --write '{src,public,test}/**/*.js'",
     "test": "react-scripts test",
     "dist": "env-cmd -f ./.env electron-builder",
     "dist:win": "env-cmd -f ./.env electron-builder -w --x64 --ia32",
