--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "test:ci": "react-scripts test --env=jsdom --coverage",
     "report": "cat ./coverage/lcov.info | env-cmd -f ./.env.test codacy-coverage",
     "report:ci": "cat ./coverage/lcov.info | codacy-coverage",
-    "version": "git add CHANGELOG.md && standard-version -a"
+    "version": "git add CHANGELOG.md && standard-version -a",
+    "mocha": "concurrently \"env-cmd -f ./.env.test react-scripts start\" \"wait-on http://localhost:3000 && mocha"
   },
   "dependencies": {
     "@material-ui/core": "4.9.4",
@@ -139,6 +140,7 @@
     "enzyme-to-json": "3.4.4",
     "eslint-config-airbnb": "18.0.1",
     "eslint-config-prettier": "6.10.0",
+    "eslint-plugin-mocha": "6.3.0",
     "husky": "4.2.3",
     "npm-run-all": "4.1.5",
     "prettier": "1.19.1",
