--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "report": "cat ./coverage/lcov.info | env-cmd -f ./.env.test codacy-coverage",
     "report:ci": "cat ./coverage/lcov.info | codacy-coverage",
     "version": "git add CHANGELOG.md && standard-version -a",
-    "mocha": "mkdirp test/tmp && concurrently \"env-cmd -f ./.env.test react-scripts start\" \"wait-on http://localhost:3000 && mocha \"test/**/*.test.js\"\""
+    "mocha": "mkdirp test/tmp && concurrently \"env-cmd -f ./.env.test react-scripts start\" \"wait-on http://localhost:3000 && mocha --require @babel/register \"test/**/*.test.js\"\""
   },
   "dependencies": {
     "@material-ui/core": "4.9.4",
@@ -76,6 +76,7 @@
     "about-window": "1.13.2",
     "archiver": "3.1.1",
     "bson-objectid": "1.3.0",
+    "chai": "4.2.0",
     "cheerio": "1.0.0-rc.3",
     "classnames": "2.2.6",
     "clsx": "1.1.0",
@@ -99,6 +100,7 @@
     "md5": "2.2.1",
     "mime-types": "2.1.26",
     "mkdirp": "1.0.3",
+    "mocha": "7.1.0",
     "node-machine-id": "1.1.12",
     "prop-types": "15.7.2",
     "qs": "6.9.1",
@@ -128,9 +130,13 @@
     "universal-analytics": "0.4.20"
   },
   "devDependencies": {
+    "@babel/cli": "7.8.4",
+    "@babel/core": "7.9.0",
+    "@babel/plugin-transform-runtime": "7.9.0",
+    "@babel/preset-env": "7.9.0",
+    "@babel/register": "7.9.0",
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
-    "chai": "4.2.0",
     "codacy-coverage": "3.4.0",
     "concurrently": "5.1.0",
     "cross-env": "7.0.0",
