--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "react-countup": "4.3.3",
     "react-detect-offline": "2.4.0",
     "react-dev-utils": "10.2.0",
+    "react-diff-viewer": "3.0.2",
     "react-dom": "16.13.0",
     "react-i18next": "11.3.3",
     "react-immutable-proptypes": "2.1.0",
