--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "react-redux-toastr": "7.6.4",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
+    "react-select": "3.1.0",
     "react-split-pane": "0.1.89",
     "recharts": "1.8.5",
     "redux": "4.0.5",
