--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
     "extract-zip": "1.6.7",
+    "fs-extra": "9.0.1",
     "history": "4.10.1",
     "i18next": "19.3.2",
     "immutable": "4.0.0-rc.12",
