--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "react-dom": "16.13.0",
     "react-i18next": "11.3.3",
     "react-immutable-proptypes": "2.1.0",
+    "react-joyride": "2.2.1",
     "react-json-view": "1.19.1",
     "react-loading": "2.0.3",
     "react-quill": "1.3.3",
