--- a/.gitignore
+++ b/.gitignore
@@ -62,8 +62,8 @@ build/*
 # exclude tarballs
 *.tgz
 
-# excluse test outputs
+# exclude test outputs
 test/tmp
 
-# excluse app update file
+# exclude app update file
 dev-app-update.yml
